force-app/main/default/objects/TechPro__c/TechPro__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TechPro</label>
</CustomObject>