force-app/main/default/objects/TechPro__c/fields/LinkedIn_User_Password__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_User_Password__c</fullName>
    <label>LinkedIn User Password</label>
    <length>150</length>
    <type>Text</type>
</CustomField>