force-app/main/default/objects/TechPro__c/fields/LinkedIn_User_token__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_User_token__c</fullName>
    <label>LinkedIn User  token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>